--- a/css/css.css
+++ b/css/css.css
@@ -1,15 +1,3 @@
-.jumbotron {
-    padding:70px 30px 70px 30px;
-    margin:0px auto;
-    background: #6E3F19;
-    color:floralwhite;
-}
-address{
-    font-size:80%;
-    margin:0px;
-    color:#0f0f0f;
-}
-
 .row-header{
     margin:0px auto;
     padding:0px;
@@ -25,17 +13,33 @@ address{
     margin:0px auto;
     padding: 20px 0px 20px 0px;
 }
-
-body{
-    padding:50px 0px 0px 0px;
-    z-index:0;
+.jumbotron {
+    padding:70px 30px 70px 30px;
+    margin:0px auto;
+    background: #6E3F19;
+    color:floralwhite;
+}
+address{
+    font-size:80%;
+    margin:0px;
+    color:#0f0f0f;
 }
 .bg-light {
     background-color: #dbb08d !important;
 }
-
+body{
+    padding:50px 0px 0px 0px;
+    z-index:0;
+}
 .table .thead-dark th{
     color:floralwhite;
     background-color:#6E3F19
 }
-tr:hover {background-color:#dbb08db0!important}
+tr:hover {background-color:#dbb08d !important}
+
+.tab-content {
+    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    padding: 10px;
+  }
